--- a/package.json
+++ b/package.json
@@ -17,17 +17,24 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jose": "^4.14.6",
     "jsonwebtoken": "^9.0.2",
     "jwt-simple": "^0.5.6",
     "mongo": "^0.1.0",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
-    "nodemon": "^3.0.1"
+    "node-fetch": "^3.3.2",
+    "nodemon": "^3.0.1",
+    "openid-client": "^5.6.1",
+    "socket.io": "^4.7.2",
+    "ssh2": "^1.14.0",
+    "tunnel-ssh": "^5.1.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/jwt-simple": "^0.5.34",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
